<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/trade_size_dp_16"
        android:paddingLeft="@dimen/trade_size_dp_40"
        android:paddingRight="@dimen/trade_size_dp_40"
        android:paddingTop="@dimen/trade_size_dp_16"
        tools:context="activity.MainActivity">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/trade_size_dp_150"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/trade_size_dp_5"
            android:layout_marginTop="@dimen/trade_size_dp_80"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/icon_visto" />

        <TextView
            android:id="@+id/txt_pop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="end"
            android:shadowColor="@color/black_transparente"
            android:text="@string/pop"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/blue"
            android:textSize="@dimen/trade_txt_size_sp_40"
            app:layout_constraintEnd_toStartOf="@+id/txt_corn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_login" />

        <TextView
            android:id="@+id/txt_corn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/corn"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/red"
            android:textSize="@dimen/trade_txt_size_sp_40"
            app:layout_constraintTop_toTopOf="@+id/txt_pop"
            app:layout_constraintStart_toEndOf="@+id/txt_pop"
            />

        <TextView
            android:id="@+id/txt_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/show"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/blue"
            android:textSize="@dimen/trade_txt_size_sp_40"
            app:layout_constraintTop_toTopOf="@+id/txt_corn"
            app:layout_constraintStart_toEndOf="@+id/txt_corn"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_corn"
            android:layout_marginTop="@dimen/trade_size_dp_5">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_listas"
                android:layout_marginTop="@dimen/trade_size_dp_21"
                android:ems="10"
                android:hint="@string/email_tx"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textinput_pass"
            app:layout_constraintTop_toBottomOf="@+id/textinput_login"
            android:paddingTop="@dimen/trade_size_dp_3">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login"
                android:layout_marginTop="@dimen/trade_size_dp_17"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_visto"
            android:onClick="onclick"
            android:text="@string/bt_signin"
            app:layout_constraintTop_toBottomOf="@+id/textinput_pass"
            android:textCursorDrawable="@drawable/button_visto" />

            <TextView
                android:id="@+id/recuperar_senha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/reset_password"
                android:textStyle="bold"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logar"
                />

            <TextView
                android:id="@+id/vincular_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="onclick"
                android:text="@string/criar_login_popcorn"
                android:textStyle="normal|bold|italic"
                tools:ignore="RtlHardcoded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logar"
                />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/trade_size_dp_40"
            android:layout_marginTop="@dimen/trade_size_dp_8"
            android:onClick="onclick"
            android:paddingLeft="@dimen/trade_size_dp_10"
            android:paddingRight="@dimen/trade_size_dp_10"
            android:showDividers="middle"
            app:fb_defaultColor="#39579B"
            app:fb_focusColor="#6183d2"
            app:fb_fontIconResource="&#xf230;"
            app:fb_fontIconSize="@dimen/trade_txt_size_sp_20"
            app:fb_iconPaddingRight="@dimen/trade_size_dp_20"
            app:fb_iconPosition="left"
            app:fb_radius="@dimen/trade_size_dp_2"
            app:fb_text="Facebook Connect"
            app:fb_textColor="#ffffff"
            app:fb_textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/recuperar_senha"
            />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/bt_anonimous"
            android:layout_width="match_parent"
            android:layout_height="@dimen/trade_size_dp_40"
            android:layout_marginTop="@dimen/trade_size_dp_8"
            android:onClick="onclick"
            android:paddingBottom="@dimen/trade_size_dp_10"
            android:paddingEnd="@dimen/trade_size_dp_20"
            android:paddingStart="@dimen/trade_size_dp_10"
            android:paddingTop="@dimen/trade_size_dp_10"
            app:fb_borderColor="#FFFFFF"
            app:fb_borderWidth="@dimen/trade_size_dp_1"
            app:fb_defaultColor="#020259"
            app:fb_focusColor="@color/red"
            app:fb_fontIconResource="&#xf21b;"
            app:fb_fontIconSize="@dimen/trade_txt_size_sp_20"
            app:fb_iconPosition="left"
            app:fb_text="@string/logar_como_anonimo"
            app:fb_textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/facebook"/>

        <TextView
            android:id="@+id/warining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anonimo_alerta"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/bt_anonimous"
            android:layout_marginTop="@dimen/trade_size_dp_14"
            android:layout_marginBottom="@dimen/trade_size_dp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/trade_txt_size_sp_12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>