<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fab_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:importantForAccessibility="yes"
    android:focusable="true"
    android:layout_marginEnd="@dimen/trade_size_dp_6"
    android:layout_marginBottom="@dimen/trade_size_dp_35"
    tools:visibility="visible"
    android:visibility="gone">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/menu_item_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_heart"
        android:importantForAccessibility="yes"
        android:focusable="true"
        fab:fab_label="@string/adicionar_favorite"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/menu_item_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_calendar2"
        android:importantForAccessibility="yes"
        android:focusable="true"
        fab:fab_label="@string/adicionar_watch"
        fab:fab_size="mini" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/menu_item_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fab_star2"
        android:importantForAccessibility="yes"
        android:focusable="true"
        fab:fab_label="@string/adicionar_rated"
        fab:fab_size="mini" />

</com.github.clans.fab.FloatingActionMenu>