<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:background="@color/transparent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/trade_size_dp_8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trade_size_dp_8"
            app:srcCompat="@drawable/oculos_grande" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_login"
            app:layout_constraintTop_toBottomOf="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trade_size_dp_5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_listas"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/trade_size_dp_21"
                android:ems="10"
                android:hint="@string/email_tx"

                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/criar_pass"
            app:layout_constraintTop_toBottomOf="@+id/create_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trade_size_dp_5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/trade_size_dp_17"
                android:hint="@string/password"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/criar_repetir_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/criar_pass"
            android:layout_marginTop="@dimen/trade_size_dp_5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_marginTop="@dimen/trade_size_dp_17"
                android:ems="10"
                android:hint="@string/repetir_nova_senha"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/criar_repetir_pass"
            android:padding="@dimen/trade_size_dp_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_new_login_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/play_video"
                android:text="@string/cancel"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_new_login_ok"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginStart="@dimen/trade_size_dp_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>